update payment apis
